fix: update dropdown menu positioning in App-top-bar and App-bottom-bar for better visibility

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,9 +103,14 @@
   border-bottom-right-radius: var(--border-radius-lg) !important;
 }
 
-.philani-excalidraw-bottom-toolbar .excalidraw .App-toolbar-content .dropdown-menu--mobile {
+.philani-excalidraw-bottom-toolbar .excalidraw .App-bottom-bar .App-toolbar-content .dropdown-menu--mobile {
   top: 55px !important;
   bottom: auto !important;
+}
+
+.philani-excalidraw-bottom-toolbar .excalidraw .App-top-bar .App-toolbar-content .dropdown-menu--mobile {
+  top: auto !important;
+  bottom: 55px !important;
 }
 
 .philani-excalidraw-bottom-toolbar .excalidraw .App-toolbar-content .dropdown-menu--mobile .dropdown-menu-container {
